Updated French Translation
Updated French translation to match additions in latest releases

--- a/packages/client/locales/fr_FRA/admin.json
+++ b/packages/client/locales/fr_FRA/admin.json
@@ -10,6 +10,7 @@
     "MANAGE_NAME_CHANGE_REQUESTS": "Gérer les requêtes de changement de nom",
     "MANAGE_CAD_SETTINGS": "Paramètres du CAD",
     "MANAGE_CUSTOM_FIELDS": "Gérer les champs personnalisés",
+    "MANAGE_CUSTOM_ROLES": "Gérer les rôles personnalisés",
     "MANAGE_COURTHOUSE": "Gérer la cours de justice",
     "import": "Importer",
     "IMPORT_CITIZENS": "Importer Citoyens",
@@ -27,7 +28,7 @@
     "FEATURES": "Fonctionnalités",
     "MISC_SETTINGS": "Paramètres supplémentaires",
     "deleteBusiness": "Supprimer l'entreprise",
-    "giveTempPassword": "Donner un mot de passe temporaire",
+    "giveTempPassword": "Générer un mot de passe temporaire",
     "continue": "Oui, continuer.",
     "reGenerateToken": "Re-générer le token",
     "inBolo": "En BOLO",
@@ -52,6 +53,14 @@
     "deleteCustomField": "Supprimer le champ personnalisé",
     "deleteUnit": "Supprimer l'unité",
     "callsignManagement": "Gérer le callsign",
+    "customRoles": "Rôles personnalisés",
+    "createCustomRole": "Créer rôle personnalisé",
+    "noCustomRoles": "Il n'y a aucun rôles personnalisés pour le moment",
+    "deleteCustomRole": "Supprimer le rôle personnalisé",
+    "editCustomRole": "Modifier le rôle personnalisé",
+    "manageRoles": "Gérer les rôles personnalisés",
+    "roles": "Rôles",
+    "alert_deleteCustomRole": "Êtes-vous sûr de vouloir supprimer <span>{role}</span> ? Cette action ne peut pas être annulée",
     "alert_deleteUnit": "Êtes-vous sûr de vouloir supprimer <span>{unit}</span> ? Cette action ne peut pas être annulée !",
     "alert_deleteCustomField": "Êtes-vous sûr de vouloir supprimer ce champ personnalisé ? Cette action ne peut pas être annulée. Toutes les valeurs créées avec ce champ seront également supprimées.",
     "info_pendingBusinesses": "Ce sont des entreprises créées qui attendent l'approbation pour être utilisées. Acceptez-les ou refusez-les.",
