--- a/packages/client/locales/fr_FRA/auth.json
+++ b/packages/client/locales/fr_FRA/auth.json
@@ -18,6 +18,7 @@
     "loginViaDiscord": "Se connecter via Discord",
     "continueAs": "Continuer en tant que {username}",
     "sixDigitCode": "Veuillez entrer le code à 6 chiffres de votre application d'authentification",
-    "loginViaSteam": "Se connecter via Steam"
+    "loginViaSteam": "Se connecter via Steam",
+    "or": "OU"
   }
 }
