--- a/packages/client/locales/fr_FRA/leo.json
+++ b/packages/client/locales/fr_FRA/leo.json
@@ -2,7 +2,7 @@
   "Leo": {
     "dispatch": "Dispatch",
     "myOfficers": "Mes Officiers",
-    "myOfficerLogs": "Mes Logs",
+    "myOfficerLogs": "Mes Logs (Officier)",
     "createOfficer": "Créer Officier",
     "editOfficer": "Modifier Officier",
     "deleteOfficer": "Supprimer Officier",
@@ -217,9 +217,24 @@
     "createCitizen": "Créer citoyen",
     "unit": "Unité",
     "createVehicle": "Créer véhicule",
+    "tones": "Tonalités",
+    "notesInfo": "Envoie une tonalité de notification avec un message facultatif pour alerter LEO ou EMS/FD",
+    "emsFdTone": "Tonalité EMS/FD",
+    "leoTone": "Tonalité LEO",
+    "sendTone": "Envoyer Tonalité",
+    "toneSuccess": "Envoi réussi des tonalités aux forces sélectionnées",
+    "toneNotification": "Notification Tonalité",
+    "weaponExams": "Examens PPA",
+    "noWeaponExams": "Il n'y a pas d'examens de licence de port d'armes pour le moment.",
+    "editWeaponExam": "Modifier Examen PPA",
+    "createWeaponExam": "Créer un examen PPA",
+    "deleteWeaponExam": "Supprimer Examen PPA",
+    "activeWarrants": "Mandats actifs",
+    "noActiveWarrants": "Il n'y a pas de mandat actif",
     "alert_deleteNote": "Êtes-vous sûr de vouloir supprimer cette note ? Cette action ne peut être annulée.",
     "alert_deleteQualification": "Êtes-vous sur de vouloir supprimer cette qualification ? Cette action ne peut être annulée.",
     "alert_deleteDLExam": "Êtes-vous sûr de vouloir supprimer cet examen du permis de conduire ? Cette action ne peut être annulée.",
+    "alert_deleteWeaponExam": "Êtes-vous sûr de vouloir supprimer cet examen du permis de port d'arme ? Cette action ne peut être annulée.",
     "vehicleImpoundLocation": "La plaque d'immatriculation fournie ({plate}) sera mis en fourrière à {impoundLocation}. Vous pourrez visualiser ce véhicule sur la page de la fourrière.",
     "alert_endIncident": "Êtes-vous sûr de vouloir mettre fin à cet incident ? Il peut toujours être vu par les officiers.",
     "alert_deleteRecord": "Êtes-vous sûr de vouloir supprimer ce dossier ? Cette action ne peut être annulée.",
