--- a/packages/client/locales/fr_FRA/ems-fd.json
+++ b/packages/client/locales/fr_FRA/ems-fd.json
@@ -17,6 +17,7 @@
     "activeDeputy": "Adjoint Actif",
     "declareDead": "Déclarer mort",
     "declareAlive": "Déclarer vivant",
+    "myDeputyLogs": "Mes Logs (Adjoints)",
     "alert_deleteDeputy": "Êtes-vous sûr de vouloir supprimer <span>{deputy}</span> ? Cette action ne peut être annulée."
   }
 }
