--- a/packages/client/locales/fr_FRA/admin.json
+++ b/packages/client/locales/fr_FRA/admin.json
@@ -11,7 +11,7 @@
     "MANAGE_CAD_SETTINGS": "Paramètres du CAD",
     "MANAGE_CUSTOM_FIELDS": "Gérer les champs personnalisés",
     "MANAGE_CUSTOM_ROLES": "Gérer les rôles personnalisés",
-    "MANAGE_COURTHOUSE": "Gérer la cours de justice",
+    "MANAGE_COURTHOUSE": "Gérer le tribunal",
     "import": "Importer",
     "IMPORT_CITIZENS": "Importer Citoyens",
     "IMPORT_VEHICLES": "Importer Véhicules",
@@ -35,12 +35,12 @@
     "pendingBusinesses": "Entreprises en attente",
     "status": "Statut",
     "allBusinesses": "Toutes les entreprises",
-    "whitelisted": "Whitelisted",
+    "whitelisted": "Dans la liste blanche",
     "declineUnit": "Refuser l'unité",
     "action": "Action",
     "noPendingOfficers": "Il n'y a aucun agent en attente d'accès à un département.",
     "allUnits": "Toutes les unités",
-    "departmentWhitelisting": "Whitelisting du département ({length})",
+    "departmentWhitelisting": "Liste blanche du département ({length})",
     "importViaFile": "Importer via fichier",
     "managePermissions": "Gérer les permissions",
     "detailedPermissions": "Permissions détaillées",
