🛠️ Minor Revisions (fr_FRA)
REV-2022.07.22
- Reverted "Twitter" to "Bleeter" to avoid any copyright issues.
- Corrected bad translations.
- Added details to differentiate similar elements.

--- a/packages/client/locales/fr_FRA/account.json
+++ b/packages/client/locales/fr_FRA/account.json
@@ -8,9 +8,9 @@
     "connections": "Connexions",
     "connectDiscord": "Lier son compte Discord",
     "disconnectDiscord": "Délier son compte Discord",
-    "disconnectText": "Cela ne vous permettra plus de vous connecter via Discord",
+    "disconnectText": "Cela ne vous permettra plus de vous connecter avec Discord",
     "disabledDisconnectText": "Vous ne pouvez pas délier votre compte Discord lorsque l'option 'Interdire la connexion régulière' est activée. Pour supprimer votre compte, veuillez contacter un administrateur",
-    "connectText": "Cela vous permettra de vous connecter via Discord.",
+    "connectText": "Cela vous permettra de vous connecter avec Discord.",
     "disconnecting": "Déconnexion...",
     "currentPassword": "Mot de passe actuel",
     "newPassword": "Nouveau mot de passe",
@@ -43,8 +43,8 @@
     "steam": "Steam",
     "connectSteam": "Lier son compte Steam",
     "disconnectSteam": "Délier son compte Steam",
-    "disconnectSteamText": "Cela ne vous permettra plus de vous connecter via Steam.",
-    "connectSteamText": "Cela vous permettra de vous connecter via Steam.",
+    "disconnectSteamText": "Cela ne vous permettra plus de vous connecter avec Steam.",
+    "connectSteamText": "Cela vous permettra de vous connecter avec Steam.",
     "locale": "Langue",
     "viewMyPermissions": "Voir mes permissions"
   },
