--- a/packages/client/locales/fr_FRA/auth.json
+++ b/packages/client/locales/fr_FRA/auth.json
@@ -6,7 +6,7 @@
     "username": "Nom d'utilisateur",
     "password": "Mot de passe",
     "confirmPassword": "Confirmer le mot de passe",
-    "noAccount": "Vous n'avez pas de compte ? Inscrivez-vous ici.",
+    "noAccount": "Vous n'avez pas encore de compte ? Inscrivez-vous ici.",
     "hasAccount": "Vous possédez déjà un compte ? Connectez-vous ici.",
     "show": "montrer",
     "hide": "cacher",
@@ -15,10 +15,10 @@
     "totpCode": "Code 2FA",
     "twoFactorCode": "Code à deux facteurs",
     "savePasswordInfo": "Veillez à enregistrer votre nouveau mot de passe en toute sécurité afin que cela ne se reproduise pas !",
-    "loginViaDiscord": "Se connecter via Discord",
+    "loginViaDiscord": "Se connecter avec Discord",
     "continueAs": "Continuer en tant que {username}",
     "sixDigitCode": "Veuillez entrer le code à 6 chiffres de votre application d'authentification",
-    "loginViaSteam": "Se connecter via Steam",
+    "loginViaSteam": "Se connecter avec Steam",
     "or": "OU"
   }
 }
