--- a/packages/client/locales/fr_FRA/business.json
+++ b/packages/client/locales/fr_FRA/business.json
@@ -1,32 +1,32 @@
 {
   "Business": {
     "businesses": "Entreprises",
-    "owned": "Possédée",
-    "joined": "Rejoint",
+    "owned": "Possédée(s)",
+    "joined": "Rejoint(s)",
     "noOwned": "Vous ne possédez aucune entreprise",
     "role": "Rôle",
     "citizen": "Citoyen",
-    "notEmployee": "Vous n'êtes pas un employée d'une autre entreprise",
+    "notEmployee": "Vous n'êtes pas employée dans une autre entreprise",
     "business": "Entreprise",
     "createBusiness": "Créer entreprise",
     "joinBusiness": "Rejoindre entreprise",
     "owner": "Propriétaire",
     "name": "Nom",
     "address": "Adresse",
-    "whitelisted": "Whitelisted",
-    "deletePost": "Supprimer le post",
-    "createPost": "Créer un post",
-    "editPost": "Modifier le post",
+    "whitelisted": "Liste blanche",
+    "deletePost": "Supprimer la publication",
+    "createPost": "Créer une publication",
+    "editPost": "Modifier la publication",
     "employees": "Employés",
     "employeeOfTheMonth": "Employé du mois",
     "publishedBy": "Publié par",
     "fire": "Licencier",
     "manageEmployee": "Gérer l'employée",
     "canManageEmployees": "Peut gérer les employés",
-    "canCreatePosts": "Peut créer des posts",
+    "canCreatePosts": "Peut créer des publications",
     "fireEmployee": "Licencier l'employé",
     "deleteBusiness": "Supprimer l'entreprise",
-    "whitelistStatus": "Statut whitelist",
+    "whitelistStatus": "Statut liste blanche",
     "allEmployees": "Tous les employés",
     "pendingEmployees": "Employés en attente",
     "businessVehicles": "Véhicules d'entreprise",
@@ -34,13 +34,13 @@
     "noVehicles": "Cette entreprise n'a pas de véhicules enregistrés.",
     "businessIsWhitelisted": "Cette entreprise est sur liste blanche. Vous pourrez la consulter une fois que vous aurez été accepté.",
     "businessWhitelistedCAD": "Cette entreprise est toujours en attente de l'approbation d'un administrateur.",
-    "postTitle": "Titre du post",
-    "postBody": "Corps du post",
+    "postTitle": "Titre de la publication",
+    "postBody": "Corps de la publication",
     "nameDescription": "Le nom de votre entreprise.",
     "addressDescription": "L'adresse de votre entreprise.",
     "whitelistDescription": "Les citoyens qui veulent rejoindre votre entreprise doivent être examinés. Ils peuvent être acceptés ou refusés.",
     "alert_fireEmployee": "Êtes-vous sûr de vouloir licencier <span>{employee}</span> ? Cette action ne peut être annulée.",
-    "alert_deletePost": "Êtes-vous sûr de vouloir supprimer ce post ? Cette action ne peut être annulée.",
+    "alert_deletePost": "Êtes-vous sûr de vouloir supprimer cette publication ? Cette action ne peut être annulée.",
     "alert_deleteBusiness": "Êtes-vous sûr de vouloir supprimer \"<span>{business}</span>\" ? Cette action ne peut être annulée."
   }
 }
