--- a/packages/client/locales/fr_FRA/citizen.json
+++ b/packages/client/locales/fr_FRA/citizen.json
@@ -56,7 +56,7 @@
     "noVehicles": "Vous n'avez pas encore de véhicules enregistrés.",
     "deleteVehicle": "Supprimer Véhicule",
     "reportAsStolen": "Signaler comme volé",
-    "reApplyForDmv": "Refaire une demande de DMV",
+    "reApplyForDmv": "Refaire une demande auprès du SPCPV",
     "registeredVehicles": "Véhicules Enregistrés",
     "flags": "Signalements",
     "inspectionStatus": "Statut du contrôle technique",
