--- a/packages/client/locales/fr_FRA/common.json
+++ b/packages/client/locales/fr_FRA/common.json
@@ -12,7 +12,7 @@
     "off": "Éteint",
     "enabled": "Activé",
     "disabled": "Désactivé",
-    "error": "Une erreur inattendue a eu lieu",
+    "error": "Une erreur inattendue s'est produite",
     "view": "Voir",
     "create": "Créer",
     "reason": "Raison",
@@ -57,17 +57,17 @@
   "Nav": {
     "citizen": "Citoyen",
     "citizens": "Citoyens",
-    "bleeter": "Twitter",
+    "bleeter": "Bleeter",
     "taxi": "Taxi",
     "business": "Entreprise",
     "truckLogs": "Logs des camions",
     "admin": "Admin",
     "dispatch": "Dispatch",
-    "liveMap": "Live Map",
+    "liveMap": "Map en Direct",
     "officer": "LEO",
     "dashboard": "Tableau de bord",
-    "myOfficers": "Mes Officiers",
-    "myOfficerLogs": "Mes Logs (Officier)",
+    "myOfficers": "Mes Personnages LEO",
+    "myOfficerLogs": "Mes Logs (LEO)",
     "incidents": "Incidents",
     "impoundLot": "Fourrière",
     "manageUnits": "Gérer les unités",
@@ -75,7 +75,7 @@
     "tow": "Dépanneur",
     "towLogs": "Logs dépanneur",
     "emsFd": "EMS/FD",
-    "myDeputies": "Mes Adjoints",
+    "myDeputies": "Mes Personnages EMS/FD",
     "account": "Compte",
     "logout": "Déconnexion",
     "login": "Connexion",
@@ -84,10 +84,10 @@
     "citizenLogs": "Logs des citoyens",
     "courthouse": "Tribunal",
     "dlExams": "Examens du permis de conduire",
-    "dmv": "Department of Motor Vehicles",
+    "dmv": "Service du Permis de Conduire et des Papiers du Véhicule",
     "penalCodes": "Code Pénal",
-    "weaponExams": "Examens pour le port d'armes",
-    "myDeputyLogs": "Mes Logs (Adjoint)"
+    "weaponExams": "Examens pour le PPA",
+    "myDeputyLogs": "Mes Logs (EMS/FD)"
   },
   "Errors": {
     "unknown": "Une erreur inattendue s'est produite",
