--- a/packages/client/locales/fr_FRA/leo.json
+++ b/packages/client/locales/fr_FRA/leo.json
@@ -1,17 +1,17 @@
 {
   "Leo": {
     "dispatch": "Dispatch",
-    "myOfficers": "Mes Officiers",
-    "myOfficerLogs": "Mes Logs (Officier)",
-    "createOfficer": "Créer Officier",
-    "editOfficer": "Modifier Officier",
-    "deleteOfficer": "Supprimer Officier",
+    "myOfficers": "Mes Personnages LEO",
+    "myOfficerLogs": "Mes Logs (LEO)",
+    "createOfficer": "Créer Officier/Agent",
+    "editOfficer": "Modifier Officier/Agent",
+    "deleteOfficer": "Supprimer Officier/Agent",
     "callsign": "Callsign",
     "department": "Département",
-    "officer": "Officier",
-    "officerName": "Nom de l'officier",
-    "noOfficers": "Vous n'avez aucun officier pour le moment.",
-    "selectOfficer": "Sélectionner Officier",
+    "officer": "Officier/Agent",
+    "officerName": "Nom de l'officier/agent",
+    "noOfficers": "Vous n'avez aucun officier/agent pour le moment.",
+    "selectOfficer": "Sélectionner Officier/Agent",
     "totalTime": "Temps Total",
     "startedAt": "Commencé À",
     "endedAt": "Terminé À",
@@ -31,13 +31,13 @@
     "notepad": "Bloc-notes",
     "plateSearch": "Recherche par immatriculation",
     "weaponSearch": "Recherche d'arme",
-    "activeOfficer": "Officier actif",
-    "activeOfficers": "Officiers Actifs",
-    "updateAOP": "Mettre à Jour l'Air de Jeu",
+    "activeOfficer": "Officier/agent actif",
+    "activeOfficers": "Officiers/agents Actifs",
+    "updateAOP": "Mettre à Jour la zone de patrouille",
     "utilityPanel": "Panneau Utilitaire",
-    "noActiveOfficers": "Il n'y a aucun officier actif",
+    "noActiveOfficers": "Il n'y a aucun officier/agent actif",
     "badgeNumber": "Numéro de Badge",
-    "areaOfPlay": "Aire de Jeu",
+    "areaOfPlay": "Zone de patrouille",
     "plateOrVin": "Entrer Immatriculation ou NIV",
     "serialNumber": "Entrer Numéro de Série",
     "results": "Résultats",
@@ -62,7 +62,7 @@
     "hasWarrants": "AVERTISSEMENT : Ce citoyen possède actuellement un mandat actif !",
     "rank": "Grade",
     "position": "Poste",
-    "officerLogs": "Logs Officier",
+    "officerLogs": "Logs Officier/Agent",
     "disableSignal100": "Désactiver Signal 100",
     "enableSignal100": "Activer Signal 100",
     "signal100enabled": "Signal 100 activé",
@@ -70,7 +70,7 @@
     "suspendLicense": "Suspendre Licence",
     "deleteRecord": "Supprimer Dossier",
     "image": "Image",
-    "panicButton": "Panic Button",
+    "panicButton": "Panique",
     "panicButtonLeo": "{officer} a appuyer sur le panic button.",
     "viewAllResults": "Voir tous les résultats",
     "vehicleReportedStolen": "AVERTISSEMENT : Ce véhicule est signalé comme volé.",
@@ -87,7 +87,7 @@
     "firearmsInvolved": "Arme(s) à feu impliquée(s)",
     "injuriesOrFatalities": "Blessures ou Décès",
     "arrestsMade": "Arrestation(s) effectuée(s)",
-    "involvedOfficers": "Officiers Impliqués",
+    "involvedOfficers": "Officiers/agents Impliqués",
     "noIncidents": "Il n'y a aucun incident pour le moment.",
     "deleteIncident": "Supprimer Incident",
     "toggleRecords": "Activer Dossiers",
@@ -145,7 +145,7 @@
     "noIncidentEvents": "Cet incident n'a aucun événement.",
     "viewCall": "Voir Appel",
     "situationCode": "Code Situation",
-    "mergeOfficers": "Fusionner Officiers",
+    "mergeOfficers": "Fusionner Officiers/Agents",
     "manageVehicleFlags": "Gérer signalements du véhicule",
     "manageCitizenFlags": "Gérer signalements du citoyen",
     "successCreateWarrant": "Création d'un mandat pour {citizen} réussie",
@@ -154,7 +154,7 @@
     "successCreateWarning": "Création d'un avertissement écrit pour {citizen} réussie",
     "goOnDuty": "En Service",
     "goOffDuty": "Hors-Service",
-    "officers": "Officiers",
+    "officers": "Officiers/Agents",
     "callsign1": "Symbole 1 du Callsign",
     "callsign2": "Symbole 2 du Callsign",
     "DLExams": "Examens du permis de conduire",
@@ -168,7 +168,7 @@
     "license": "Licence",
     "otherFields": "Autres Champs",
     "manageCustomFields": "Gérer les autres champs",
-    "dmv": "Department of Motor Vehicles",
+    "dmv": "Service du Permis de Conduire et des Papiers du Véhicule",
     "unitsInvolved": "Unités Impliquées",
     "customFieldSearch": "Rechercher par Champ Personnalisé",
     "noCustomFieldResults": "Aucun résultat pour cette recherche.",
@@ -176,7 +176,7 @@
     "query": "Requête",
     "penalCodes": "Code Pénal",
     "noPenalCodes": "Il n'y aucun code pénal pour le moment.",
-    "noVehiclesPendingApprovalInDmv": "Il n'y aucun véhicule en attente d'approbation dans le DMV.",
+    "noVehiclesPendingApprovalInDmv": "Il n'y aucun véhicule en attente d'approbation dans le SPCPV.",
     "citizenIsConfidential": "Ce citoyen fait partie d'un service confidentiel et ses informations ne peuvent donc pas être recherchées.",
     "unitQualifications": "Qualifications des Unités",
     "addQualification": "Ajouter Qualification",
