--- a/packages/client/locales/fr_FRA/values.json
+++ b/packages/client/locales/fr_FRA/values.json
@@ -14,13 +14,13 @@
     "deleteGroup": "Supprimer Groupe",
     "ungrouped": "Non groupé",
     "licenseType": "Type de licence",
-    "whitelisted": "Whitelisted",
+    "whitelisted": "Liste Blanche",
     "whatPages": "Quelles Pages",
     "departments": "Départements",
     "isDefaultDepartment": "Département par Défaut",
     "deleteSelectedValues": "Supprimer les Valeurs Sélectionnées",
     "isDefault": "Est par défaut",
-    "defaultOfficerRank": "Grade d'officier par défaut",
+    "defaultOfficerRank": "Grade d'officier/agent par défaut",
     "pairedUnitTemplate": "Modèle d'unité en binôme",
     "isConfidential": "Est Confidentiel",
     "priority": "Priorité",
