--- a/packages/client/locales/fr_FRA/bleeter.json
+++ b/packages/client/locales/fr_FRA/bleeter.json
@@ -1,14 +1,14 @@
 {
   "Bleeter": {
-    "bleeter": "Twitter",
-    "noPosts": "Il n'y a pas de tweet pour le moment. Revenez plus tard.",
-    "createBleet": "Poster un tweet",
-    "editBleet": "Modifier le tweet",
-    "deleteBleet": "Supprimer le tweet",
-    "viewBleet": "Voir le tweet",
+    "bleeter": "Bleeter",
+    "noPosts": "Il n'y a pas de bleet pour le moment. Revenez plus tard.",
+    "createBleet": "Poster un bleet",
+    "editBleet": "Modifier le bleet",
+    "deleteBleet": "Supprimer le bleet",
+    "viewBleet": "Voir le bleet",
     "headerImage": "Image d'en-tête",
-    "bleetTitle": "Titre du tweet",
-    "bleetBody": "Corps du tweet",
+    "bleetTitle": "Titre du bleet",
+    "bleetBody": "Corps du bleet",
     "alert_deleteBleet": "Êtes-vous sûr de vouloir supprimer \"<span>{title}</span>\" ? Cette action ne peut être annulée."
   }
 }
