--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -255,6 +255,7 @@
     "vehicle": "vehicle",
     "other": "other",
     "stolen": "stolen",
+    "filters": "Filters",
     "alert_deleteBolo": "Are you sure you want to delete this bolo? This action cannot be undone"
   }
 }
