--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -148,6 +148,8 @@
     "cannotRegisterFirstWithSteam": "The first account must be registered without Steam. You can link Steam once the account is created.",
     "Unauthorized": "You have been logged out. Please log back in to continue.",
     "captchaRequired": "An error occurred trying to validate your CAPTCHA. Please try again later.",
-    "invalidCaptcha": "We were unable to verify you are a human. Please contact an administrator if you think this is an error."
+    "invalidCaptcha": "We were unable to verify you are a human. Please contact an administrator if you think this is an error.",
+    "updateAvailable": "Update Available",
+    "updateAvailableInfo": "A new update is available. Please update your SnailyCAD to take advantage of the latest features and bug fixes. Click for more information."
   }
 }
