Update common.json (fr_FRA)

--- a/packages/client/locales/fr_FRA/common.json
+++ b/packages/client/locales/fr_FRA/common.json
@@ -148,6 +148,8 @@
     "cannotRegisterFirstWithSteam": "Le premier compte doit être enregistré sans Steam. Vous pouvez lier Steam une fois le compte créé.",
     "Unauthorized": "Vous avez été déconnecté. Veuillez vous reconnecter pour continuer.",
     "captchaRequired": "Une erreur s'est produite lors de la tentative de validation de votre CAPTCHA. Veuillez réessayer plus tard.",
-    "invalidCaptcha": "Nous n'avons pas pu vérifier que vous êtes un être humain. Veuillez contacter un administrateur si vous pensez qu'il s'agit d'une erreur."
+    "invalidCaptcha": "Nous n'avons pas pu vérifier que vous êtes un être humain. Veuillez contacter un administrateur si vous pensez qu'il s'agit d'une erreur.",
+    "updateAvailable": "Mise à jour disponible",
+    "updateAvailableInfo": "Une nouvelle mise à jour est disponible. Mettez à jour SnailyCAD pour profiter des avantages des dernières fonctionnalités et corrections. Cliquez-ici pour plus d'informations."
   }
 }
