:hammer: chore: add missing actions

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -70,9 +70,10 @@
   "AuditLogs": {
     "changes": "Changes",
     "MANAGE_AUDIT_LOGS": "Audit Logs",
-    "userBanned": "User: <span>{user}</span> has been banned.",
+    "userBanned": "User: <span>{value}</span> has been banned.",
     "deletedEntry": "Item deleted with <span>id {id}</span>.",
     "createdEntry": "Item created with <span>id {id}</span>.",
+    "tempPasswordGiven": "User: <span>{value}</span> has been given a temporary password.",
     "data": "Full Data",
     "noAuditLogs": "There are no audit logs yet."
   }
