--- a/packages/client/locales/de_DE/account.json
+++ b/packages/client/locales/de_DE/account.json
@@ -1,54 +1,54 @@
 {
   "Account": {
-    "account": "Account",
-    "accountInfo": "Account Info",
-    "accountSettings": "Account Settings",
-    "passwordSettings": "Password Settings",
-    "appearanceSettings": "Appearance Settings",
-    "connections": "Connections",
-    "connectDiscord": "Connect Discord account",
-    "disconnectDiscord": "Disconnect Discord account",
-    "disconnectText": "This will remove the ability to login via Discord.",
-    "disabledDisconnectText": "You cannot disconnect your Discord connection when 'Disallow regular login' is enabled. To delete your account please contact an administrator",
-    "connectText": "This will add the ability to login via Discord.",
-    "disconnecting": "Disconnecting...",
-    "currentPassword": "Current password",
-    "newPassword": "New password",
-    "2fa": "Two Factor Authentication",
-    "confirmNewPassword": "Confirm new password",
-    "scanQRCode": "Scan this QR code to add it to your authenticator app",
-    "verifyCode": " Verify by entering a code from your authenticator app",
-    "disable": "Disable",
-    "enable2FA": "Enable Two-Factor Authentication",
-    "disable2FA": "Disable Two-Factor Authentication",
-    "next": "Next",
-    "verify": "Verify",
-    "enable2faSuccess": "Successfully enabled Two-Factor Authentication",
-    "disable2faSuccess": "Successfully disabled Two-Factor Authentication",
-    "darkTheme": "Dark Theme",
-    "statusView": "Status View",
-    "tableAlignment": "Table Actions Alignment",
-    "sounds": "Sounds",
-    "panicButton": "Panic Button",
+    "account": "Konto",
+    "accountInfo": "Konto-Informationen",
+    "accountSettings": "Kontoeinstellungen",
+    "passwordSettings": "Passwort-Einstellungen",
+    "appearanceSettings": "Erscheinungsbild",
+    "connections": "Verbindungen",
+    "connectDiscord": "Discord-Konto verknüpfen",
+    "disconnectDiscord": "Discord-Konto abmelden",
+    "disconnectText": "Dadurch wird die Möglichkeit, sich über Discord anzumelden, entfernt.",
+    "disabledDisconnectText": "Sie können Ihre Discord-Verbindung nicht trennen, wenn 'Regelmäßige Anmeldung verbieten' aktiviert ist. Um Ihr Konto zu löschen, kontaktieren Sie bitte einen Administrator.",
+    "connectText": "Dadurch wird die Möglichkeit hinzugefügt, sich über Discord anzumelden.",
+    "disconnecting": "Trennen...",
+    "currentPassword": "Aktuelles Passwort",
+    "newPassword": "Neues Passwort",
+    "2fa": "Zwei-Faktor-Authentifizierung",
+    "confirmNewPassword": "Neues Passwort bestätigen",
+    "scanQRCode": "Scannen Sie diesen QR-Code, um ihn zu Ihrer Authenticator-App hinzuzufügen.",
+    "verifyCode": "Verifizierung durch Eingabe eines Codes aus Ihrer Authenticator-App",
+    "disable": "Deaktivieren",
+    "enable2FA": "Zwei-Faktor-Authentifizierung aktivieren",
+    "disable2FA": "Zwei-Faktoren-Authentifizierung deaktivieren",
+    "next": "Nächste",
+    "verify": "Verifizieren",
+    "enable2faSuccess": "Erfolgreiche Aktivierung der Zwei-Faktor-Authentifizierung",
+    "disable2faSuccess": "Erfolgreich die Zwei-Faktor-Authentifizierung deaktiviert",
+    "darkTheme": "Dunkles Thema",
+    "statusView": "Status-Ansicht",
+    "tableAlignment": "Tabelle Aktionen Ausrichten",
+    "sounds": "Klingt",
+    "panicButton": "Panikknopf",
     "signal100": "Signal 100",
-    "stopRoleplay": "Stop roleplay",
-    "addedToCall": "Added to call",
-    "statusUpdate": "Status Update",
-    "incomingCall": "Incoming Call",
-    "dotColor": "Dot color",
-    "fullRowColor": "Full row color",
-    "userApiToken": "User Api Token",
-    "reGenerateToken": "Re-generate token",
+    "stopRoleplay": "RolePlay beenden",
+    "addedToCall": "Zum Aufruf hinzugefügt",
+    "statusUpdate": "Status-Update",
+    "incomingCall": "Eingehender Anruf",
+    "dotColor": "Punkt Farbe",
+    "fullRowColor": "Vollständige Reihenfarbe",
+    "userApiToken": "Benutzer-API-Token",
+    "reGenerateToken": "Token neu erzeugen",
     "discord": "Discord",
     "steam": "Steam",
-    "connectSteam": "Connect Steam account",
-    "disconnectSteam": "Disconnect Steam account",
-    "disconnectSteamText": "This will remove the ability to login via Steam.",
-    "connectSteamText": "This will add the ability to login via Steam.",
-    "locale": "Locale",
-    "viewMyPermissions": "View my permissions"
+    "connectSteam": "Steam-Konto verknüpfen",
+    "disconnectSteam": "Steam-Konto abmelden",
+    "disconnectSteamText": "Dadurch wird die Möglichkeit, sich über Steam anzumelden, entfernt.",
+    "connectSteamText": "Dadurch wird die Möglichkeit hinzugefügt, sich über Steam anzumelden.",
+    "locale": "Sprache",
+    "viewMyPermissions": "Meine Berechtigungen anzeigen"
   },
   "Notifications": {
-    "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
+    "CITIZEN_DELETED": "<span>{citizen}</span> wurde gelöscht. Grund: {reason}"
   }
 }
