:globe_with_meridians: German Translation Progress

--- a/packages/client/locales/de_DE/auth.json
+++ b/packages/client/locales/de_DE/auth.json
@@ -1,24 +1,24 @@
 {
   "Auth": {
-    "register": "Register",
-    "login": "Login",
-    "createAccount": "Create Account",
-    "username": "Username",
-    "password": "Password",
-    "confirmPassword": "Confirm Password",
-    "noAccount": "Don't have an account? Register here.",
-    "hasAccount": "Already have an account? Login here.",
-    "show": "show",
-    "hide": "hide",
-    "registrationCode": "Registration Code",
-    "changePassword": "Change Password",
-    "totpCode": "2FA Code",
-    "twoFactorCode": "Two Factor Code",
-    "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!",
-    "loginViaDiscord": "Login via Discord",
-    "continueAs": "Continue as {username}",
-    "sixDigitCode": "Please enter the 6-digit code from your authenticator app",
-    "loginViaSteam": "Login via Steam",
-    "or": "OR"
+    "register": "Registrieren",
+    "login": "Anmeldung",
+    "createAccount": "Konto erstellen",
+    "username": "Benutzername",
+    "password": "Passwort",
+    "confirmPassword": "Passwort bestätigen",
+    "noAccount": "Sie haben noch kein Konto? Registrieren Sie sich hier.",
+    "hasAccount": "Sie haben bereits ein Konto? Hier anmelden.",
+    "show": "anzeigen",
+    "hide": "ausblenden",
+    "registrationCode": "Registrierungscode",
+    "changePassword": "Passwort ändern",
+    "totpCode": "2FA-Code",
+    "twoFactorCode": "Zwei-Faktor-Code",
+    "savePasswordInfo": "Achten Sie darauf, dass Sie Ihr neues Passwort sicher speichern, damit dies nicht noch einmal passiert!",
+    "loginViaDiscord": "Anmeldung über Discord",
+    "continueAs": "Weiter als {username}",
+    "sixDigitCode": "Bitte geben Sie den 6-stelligen Code aus Ihrer Authenticator-App ein",
+    "loginViaSteam": "Anmeldung über Steam",
+    "or": "ODER"
   }
 }
