--- a/packages/client/locales/de_DE/business.json
+++ b/packages/client/locales/de_DE/business.json
@@ -1,46 +1,46 @@
 {
   "Business": {
-    "businesses": "Businesses",
-    "owned": "Owned",
-    "joined": "Joined",
-    "noOwned": "You do not own any businesses",
-    "role": "Role",
-    "citizen": "Citizen",
-    "notEmployee": "You are not an employee at an other business",
-    "business": "Business",
-    "createBusiness": "Create Business",
-    "joinBusiness": "Join Business",
-    "owner": "Owner",
+    "businesses": "Unternehmen",
+    "owned": "Eigene",
+    "joined": "Beitritt",
+    "noOwned": "Sie besitzen keine Unternehmen",
+    "role": "Rolle",
+    "citizen": "Bürger",
+    "notEmployee": "Sie sind nicht in einem anderen Unternehmen angestellt",
+    "business": "Unternehmen",
+    "createBusiness": "Unternehmen erstellen",
+    "joinBusiness": "Unternehmen beitreten",
+    "owner": "Besitzer",
     "name": "Name",
-    "address": "Address",
+    "address": "Adresse",
     "whitelisted": "Whitelisted",
-    "deletePost": "Delete Post",
-    "createPost": "Create Post",
-    "editPost": "Edit Post",
-    "employees": "Employees",
-    "employeeOfTheMonth": "Employee of the month",
-    "publishedBy": "Published By",
-    "fire": "Fire",
-    "manageEmployee": "Manage Employee",
-    "canManageEmployees": "Can manage employees",
-    "canCreatePosts": "Can create posts",
-    "fireEmployee": "Fire employee",
-    "deleteBusiness": "Delete Business",
-    "whitelistStatus": "Whitelist Status",
-    "allEmployees": "All Employees",
-    "pendingEmployees": "Pending Employees",
-    "businessVehicles": "Business Vehicles",
-    "noPendingEmployees": "There are no employees pending access.",
-    "noVehicles": "This business has no vehicles registered.",
-    "businessIsWhitelisted": "This business is whitelisted. You will be able to view it once you're accepted.",
-    "businessWhitelistedCAD": "This business is still awaiting approval of an administrator.",
-    "postTitle": "Post Title",
-    "postBody": "Post Body",
-    "nameDescription": "The name of your business.",
-    "addressDescription": "The address of your business.",
-    "whitelistDescription": "Citizens that want to join your business must be reviewed. They can be accepted or denied.",
-    "alert_fireEmployee": "Are you sure you want to fire <span>{employee}</span>? This action cannot be undone.",
-    "alert_deletePost": "Are you sure you want to delete this post? This action cannot be undone.",
-    "alert_deleteBusiness": "Are you sure you want to delete \"<span>{business}</span>\"? This action cannot be undone."
+    "deletePost": "Beitrag löschen",
+    "createPost": "Beitrag erstellen",
+    "editPost": "Beitrag bearbeiten",
+    "employees": "Mitarbeiter",
+    "employeeOfTheMonth": "Mitarbeiter des Monats",
+    "publishedBy": "Veröffentlicht von",
+    "fire": "Entlassen",
+    "manageEmployee": "Mitarbeiter verwalten",
+    "canManageEmployees": "Mitarbeiter verwalten können",
+    "canCreatePosts": "Beiträge erstellen können",
+    "fireEmployee": "Mitarbeiter entlassen",
+    "deleteBusiness": "Unternehmen löschen",
+    "whitelistStatus": "Whitelist-Status",
+    "allEmployees": "Alle Mitarbeiter",
+    "pendingEmployees": "Anhängige Mitarbeiter",
+    "businessVehicles": "Business-Fahrzeuge",
+    "noPendingEmployees": "Es gibt keine Mitarbeiter, die auf Zugang warten.",
+    "noVehicles": "Dieses Unternehmen hat keine Fahrzeuge zugelassen.",
+    "businessIsWhitelisted": "Dieses Unternehmen ist auf der Whitelist. Sie können es sehen, sobald Sie akzeptiert wurden.",
+    "businessWhitelistedCAD": "Dieses Unternehmen wartet noch auf die Zulassung eines Verwalters.",
+    "postTitle": "Beitrag Titel",
+    "postBody": "Beitrag Körper",
+    "nameDescription": "Der Name Ihres Unternehmens.",
+    "addressDescription": "Die Adresse Ihres Unternehmens.",
+    "whitelistDescription": "Bürger, die sich Ihrem Unternehmen anschließen wollen, müssen geprüft werden. Sie können angenommen oder abgelehnt werden.",
+    "alert_fireEmployee": "Sind Sie sicher, dass Sie <span>{employee}</span> entlassen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deletePost": "Sind Sie sicher, dass Sie diesen Beitrag löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteBusiness": "Sind Sie sicher, dass Sie \"<span>{business}</span>\" löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
