--- a/packages/client/locales/de_DE/admin.json
+++ b/packages/client/locales/de_DE/admin.json
@@ -1,69 +1,69 @@
 {
   "Management": {
-    "management": "Management",
-    "adminDashboard": "Admin Dashboard",
-    "MANAGE_CITIZENS": "Manage Citizens",
-    "MANAGE_BUSINESSES": "Manage Businesses",
-    "MANAGE_USERS": "Manage Users",
-    "MANAGE_UNITS": "Manage Units",
-    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
-    "MANAGE_NAME_CHANGE_REQUESTS": "Manage Name Change Requests",
-    "MANAGE_CAD_SETTINGS": "CAD Settings",
-    "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
-    "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
-    "MANAGE_COURTHOUSE": "Manage Courthouse",
-    "import": "Import",
-    "IMPORT_CITIZENS": "Import Citizens",
-    "IMPORT_VEHICLES": "Import Vehicles",
-    "IMPORT_WEAPONS": "Import Weapons",
-    "allUsers": "All Users",
-    "pendingUsers": "Pending Users",
-    "viewInfo": "View Info",
-    "noCitizens": "There are no citizens for this CAD yet.",
-    "noBusinesses": "There are no businesses for this CAD yet.",
-    "noUnits": "There are no units yet",
-    "user": "User",
-    "owner": "Owner",
-    "GENERAL_SETTINGS": "General Settings",
-    "FEATURES": "Features",
-    "MISC_SETTINGS": "Misc Settings",
-    "deleteBusiness": "Delete Business",
-    "giveTempPassword": "Give Temporary Password",
-    "continue": "Yes, continue.",
-    "reGenerateToken": "Re-generate Token",
+    "management": "Verwaltung",
+    "adminDashboard": "Admins-Dashboard",
+    "MANAGE_CITIZENS": "Bürger verwalten",
+    "MANAGE_BUSINESSES": "Unternehmen verwalten",
+    "MANAGE_USERS": "Benutzer verwalten",
+    "MANAGE_UNITS": "Einheiten verwalten",
+    "MANAGE_EXPUNGEMENT_REQUESTS": "Löschanträge verwalten",
+    "MANAGE_NAME_CHANGE_REQUESTS": "Namensänderung Anträge verwalten",
+    "MANAGE_CAD_SETTINGS": "CAD-Einstellungen",
+    "MANAGE_CUSTOM_FIELDS": "Benutzerdefinierte Felder verwalten",
+    "MANAGE_CUSTOM_ROLES": "Benutzerdefinierte Rollen verwalten",
+    "MANAGE_COURTHOUSE": "Gerichtsgebäude verwalten",
+    "import": "Importieren",
+    "IMPORT_CITIZENS": "Bürger importieren",
+    "IMPORT_VEHICLES": "Fahrzeuge importieren",
+    "IMPORT_WEAPONS": "Waffen importieren",
+    "allUsers": "Alle Benutzer",
+    "pendingUsers": "Anhängige Benutzer",
+    "viewInfo": "Infos anzeigen",
+    "noCitizens": "Es gibt noch keine Bürger für dieses CAD.",
+    "noBusinesses": "Es gibt noch keine Unternehmen für dieses CAD.",
+    "noUnits": "Es gibt noch keine Einheiten.",
+    "user": "Benutzer",
+    "owner": "Eigentümer",
+    "GENERAL_SETTINGS": "Allgemeine Einstellungen",
+    "FEATURES": "Besonderheiten",
+    "MISC_SETTINGS": "Sonstige Einstelllugen",
+    "deleteBusiness": "Unternehmen löschen",
+    "giveTempPassword": "Temporäres Passwort vergeben",
+    "continue": "Ja, weiter.",
+    "reGenerateToken": "Token neu erzeugen",
     "inBolo": "In BOLO",
-    "pendingBusinesses": "Pending Businesses",
+    "pendingBusinesses": "Anhängige Unternehmen",
     "status": "Status",
-    "allBusinesses": "All Businesses",
+    "allBusinesses": "Alle Unternehmen",
     "whitelisted": "Whitelisted",
-    "declineUnit": "Decline Unit",
-    "action": "Action",
-    "noPendingOfficers": "There are no officers pending access to a department.",
-    "allUnits": "All Units",
-    "departmentWhitelisting": "Department Whitelisting ({length})",
-    "importViaFile": "Import via file",
-    "managePermissions": "Manage Permissions",
-    "detailedPermissions": "Detailed Permissions",
-    "useOldPermissions": "Use old permissions",
-    "useNewPermissions": "Use new permissions",
-    "setSelectedOffDuty": "Set selected units off-duty",
-    "createCustomField": "Create custom field",
-    "editCustomField": "Edit custom field",
-    "noCustomFields": "There are no custom fields yet",
-    "deleteCustomField": "Delete Custom Field",
-    "deleteUnit": "Delete Unit",
-    "callsignManagement": "Callsign Management",
-    "customRoles": "Custom Roles",
-    "createCustomRole": "Create Custom Role",
-    "noCustomRoles": "There are no custom roles yet.",
-    "deleteCustomRole": "Delete custom role",
-    "editCustomRole": "Edit custom role",
-    "manageRoles": "Manage Roles",
-    "roles": "Roles",
-    "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
-    "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
-    "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
-    "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
-    "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
+    "declineUnit": "Einheit ablehnen",
+    "action": "Aktion",
+    "noPendingOfficers": "Es gibt keine Beamten, die auf den Zugang zu einer Abteilung warten.",
+    "allUnits": "Alle Einheiten",
+    "departmentWhitelisting": "Abteilung Whitelisting ({length})",
+    "importViaFile": "Importieren über Datei",
+    "managePermissions": "Berechtigungen verwalten",
+    "detailedPermissions": "Detaillierte Berechtigungen",
+    "useOldPermissions": "Alte Berechtigungen verwenden",
+    "useNewPermissions": "Neue Berechtigungen verwenden",
+    "setSelectedOffDuty": "Ausgewählte Einheiten auf dienstfrei setzen",
+    "createCustomField": "Benutzerdefiniertes Feld erstellen",
+    "editCustomField": "Benutzerdefiniertes Feld bearbeiten",
+    "noCustomFields": "Es sind noch keine benutzerdefinierten Felder vorhanden",
+    "deleteCustomField": "Benutzerdefiniertes Feld löschen",
+    "deleteUnit": "Einheit löschen",
+    "callsignManagement": "Rufzeichen-Management",
+    "customRoles": "Benutzerdefinierte Rollen",
+    "createCustomRole": "Benutzerdefinierte Rolle erstellen",
+    "noCustomRoles": "Es gibt noch keine benutzerdefinierten Rollen.",
+    "deleteCustomRole": "Benutzerdefinierte Rolle löschen",
+    "editCustomRole": "Benutzerdefinierte Rolle bearbeiten",
+    "manageRoles": "Rollen verwalten",
+    "roles": "Rollen",
+    "alert_deleteCustomRole": "Sind Sie sicher, dass Sie <span>{role}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteUnit": "Sind Sie sicher, dass Sie <span>{unit}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteCustomField": "Sind Sie sicher, dass Sie dieses benutzerdefinierte Feld löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden. Alle Werte, die mit diesem Feld erstellt wurden, werden ebenfalls gelöscht.",
+    "info_pendingBusinesses": "Es handelt sich um erstellte Unternehmen, die auf eine Genehmigung zur Nutzung warten. Akzeptieren Sie sie oder lehnen Sie sie ab.",
+    "alert_deleteBusiness": "Sind Sie sicher, dass Sie diesen <span>{name}</span> löschen wollen? Alle Daten gehen dabei verloren. Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
