--- a/packages/client/locales/de_DE/bleeter.json
+++ b/packages/client/locales/de_DE/bleeter.json
@@ -1,14 +1,14 @@
 {
   "Bleeter": {
     "bleeter": "Bleeter",
-    "noPosts": "There are no bleeter posts yet. Check back later",
-    "createBleet": "Create bleet",
-    "editBleet": "Edit bleet",
-    "deleteBleet": "Delete Bleet",
-    "viewBleet": "View bleet",
-    "headerImage": "Header Image",
-    "bleetTitle": "Bleet title",
-    "bleetBody": "Bleet Body",
-    "alert_deleteBleet": "Are you sure want to delete \"<span>{title}</span>\"? This action cannot be undone."
+    "noPosts": "Es gibt noch keine Bleeter-Beiträge. Später zurückschauen",
+    "createBleet": "Bleet erstellen",
+    "editBleet": "Bearbeiten bleet",
+    "deleteBleet": "Bleet löschen",
+    "viewBleet": "Ansicht bleet",
+    "headerImage": "Kopfzeilenbild",
+    "bleetTitle": "Bleet-Titel",
+    "bleetBody": "Bleet Körper",
+    "alert_deleteBleet": "Sind Sie sicher, dass Sie \"<span>{title}</span>\" löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
