:globe_with_meridians: Minor German Translation Progress

--- a/packages/client/locales/de_DE/ems-fd.json
+++ b/packages/client/locales/de_DE/ems-fd.json
@@ -1,23 +1,23 @@
 {
   "Ems": {
     "emsFd": "EMS/FD",
-    "createMedicalRecord": "Create Medical Record",
-    "searchMedicalRecord": "Search Medical Record",
-    "activeDeputies": "Active Deputies",
-    "selectDeputy": "Select Deputy",
-    "deputy": "Deputy",
-    "myDeputies": "My Deputies",
-    "createDeputy": "Create Deputy",
-    "editDeputy": "Edit Deputy",
-    "deputyName": "Deputy Name",
-    "deleteDeputy": "Delete Deputy",
-    "noDeputies": "You do not have any deputies",
-    "noActiveDeputies": "There are no active deputies",
-    "citizenNoMedicalRecords": "This citizen doesn't have any medical records.",
-    "activeDeputy": "Active Deputy",
-    "declareDead": "Declare dead",
-    "declareAlive": "Declare alive",
-    "myDeputyLogs": "My deputy logs",
-    "alert_deleteDeputy": "Are you sure you want to delete <span>{deputy}</span>? This action cannot be undone."
+    "createMedicalRecord": "Krankenakte anlegen",
+    "searchMedicalRecord": "Krankenakte suchen",
+    "activeDeputies": "Aktive Stellvertreter",
+    "selectDeputy": "Stellvertreter wählen",
+    "deputy": "Stellvertreter",
+    "myDeputies": "Meine Stellvertreter",
+    "createDeputy": "Stellvertreter erstellen",
+    "editDeputy": "Stellvertreter bearbeiten",
+    "deputyName": "Stellvertreter Name",
+    "deleteDeputy": "Stellvertreter löschen",
+    "noDeputies": "Sie haben keine Stellvertreter",
+    "noActiveDeputies": "Es gibt keine aktiven Stellvertreter",
+    "citizenNoMedicalRecords": "Dieser Bürger hat keine Krankenakte.",
+    "activeDeputy": "Aktiver Stellvertreter",
+    "declareDead": "Für tot erklären",
+    "declareAlive": "Für lebendig erklären",
+    "myDeputyLogs": "Mein Stellvertreter protokolliert",
+    "alert_deleteDeputy": "Sind Sie sicher, dass Sie <span>{deputy}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
