--- a/packages/client/locales/de_DE/truck-logs.json
+++ b/packages/client/locales/de_DE/truck-logs.json
@@ -1,15 +1,15 @@
 {
   "TruckLogs": {
-    "truckLogs": "Truck Logs",
-    "createTruckLog": "Create Truck Log",
-    "editTruckLog": "Edit Truck Log",
-    "deleteTruckLog": "Delete Truck Log",
-    "driver": "Driver",
-    "vehicle": "Vehicle",
-    "startedAt": "Started At",
-    "endedAt": "Ended At",
-    "noTruckLogs": "You don't have any truck logs yet.",
-    "notes": "Notes",
-    "alert_deleteTruckLog": "Are you sure you want to delete this truck log? This action cannot be undone."
+    "truckLogs": "Lkw-Protokolle",
+    "createTruckLog": "Lkw-Protokoll erstellen",
+    "editTruckLog": "Lkw-Protokoll bearbeiten",
+    "deleteTruckLog": "Lkw-Protokoll löschen",
+    "driver": "Treiber",
+    "vehicle": "Fahrzeug",
+    "startedAt": "Angefangen bei",
+    "endedAt": "Beendet am",
+    "noTruckLogs": "Sie haben noch keine Lkw-Protokoll.",
+    "notes": "Notizen",
+    "alert_deleteTruckLog": "Sind Sie sicher, dass Sie dieses Lkw-Protokoll löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
