--- a/packages/client/locales/de_DE/calls.json
+++ b/packages/client/locales/de_DE/calls.json
@@ -1,56 +1,56 @@
 {
   "Calls": {
-    "tow": "Tow",
-    "towLogs": "Tow Logs",
+    "tow": "Abschleppen",
+    "towLogs": "Abschlepp-Logs",
     "taxi": "Taxi",
-    "active911Calls": "Active 911 Calls",
-    "noTowCalls": "There are no tow calls yet.",
-    "noTaxiCalls": "There are no taxi calls yet.",
-    "no911Calls": "There are no 911 calls yet.",
-    "assignToCall": "Assign to call",
-    "assignedUnit": "Assigned Unit",
-    "unassignFromCall": "Unassign from call",
-    "location": "Location",
-    "caller": "Caller",
-    "createTowCall": "Create tow call",
-    "createTaxiCall": "Create taxi call",
-    "create911Call": "Create 911 call",
-    "manage911Call": "Manage 911 call",
-    "editTowCall": "Edit tow call",
-    "editTaxiCall": "Edit taxi call",
-    "assignedUnits": "Assigned Units",
-    "selectCitizen": "Select citizen",
-    "citizen": "Citizen",
-    "endCall": "End Call",
-    "end911Call": "End 911 Call",
-    "addEvent": "Add Event",
-    "selectUnit": "Select Unit",
-    "viewEvents": "View Events",
-    "callEvents": "Call Events",
-    "deleteCallEvent": "Delete Event",
-    "postal": "Postal",
-    "noEvents": "This call does not have any events",
-    "deliveryAddress": "Delivery Address",
-    "callTow": "Call Tow",
-    "departments": "Departments",
-    "divisions": "Divisions",
-    "callFilters": "Call Filters",
-    "purge": "Purge",
-    "purgeSelected": "Purge selected",
-    "purgeSelectedCalls": "Purge selected calls",
-    "toggleCall": "Toggle call",
-    "removeMarker": "Remove marker",
-    "setMarker": "Set marker",
+    "active911Calls": "Aktive 911-Anrufe",
+    "noTowCalls": "Es liegen noch keine Abschleppaufrufe vor.",
+    "noTaxiCalls": "Es gibt noch keine Taxirufe.",
+    "no911Calls": "Es liegen noch keine Notrufe vor.",
+    "assignToCall": "Zuordnen zum Anruf",
+    "assignedUnit": "Zugewiesene Einheit",
+    "unassignFromCall": "Zuordnung zum Anruf aufheben",
+    "location": "Standort",
+    "caller": "Anrufer",
+    "createTowCall": "Abschleppruf erstellen",
+    "createTaxiCall": "Taxiruf erstellen",
+    "create911Call": "911-Ruf erstellen",
+    "manage911Call": "Verwalten von 911-Anrufen",
+    "editTowCall": "Abschleppruf bearbeiten",
+    "editTaxiCall": "Taxiruf bearbeiten",
+    "assignedUnits": "Zugewiesene Einheiten",
+    "selectCitizen": "Bürger auswählen",
+    "citizen": "Bürger",
+    "endCall": "Anruf beenden",
+    "end911Call": "911-Anruf beenden",
+    "addEvent": "Ereignis hinzufügen",
+    "selectUnit": "Einheit auswählen",
+    "viewEvents": "Ereignisse anzeigen",
+    "callEvents": "Ereignisse aufrufen",
+    "deleteCallEvent": "Ereignis löschen",
+    "postal": "Post",
+    "noEvents": "Für diesen Aufruf gibt es keine Ereignisse",
+    "deliveryAddress": "Lieferadresse",
+    "callTow": "Abschleppdienst anrufen",
+    "departments": "Abteilungen",
+    "divisions": "Abteilungen",
+    "callFilters": "Filter anrufen",
+    "purge": "Bereinigen",
+    "purgeSelected": "Bereinigung ausgewählt",
+    "purgeSelectedCalls": "Ausgewählte Anrufe löschen",
+    "toggleCall": "Anruf umschalten",
+    "removeMarker": "Markierung entfernen",
+    "setMarker": "Markierung setzen",
     "situationCode": "Situation Code",
-    "towCallCreated": "Successfully created the tow call.",
-    "taxiCallCreated": "Successfully created the taxi call.",
-    "911CallCreated": "Successfully created the 911 call.",
-    "callCountyService": "Call County Service",
-    "dropToUnassign": "Drop to unassign from call",
-    "type": "Call Type",
-    "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
-    "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
-    "alert_end911Call": "Are you sure you want to end this call?",
-    "alert_endTowCall": "Are you sure you want to end this call?"
+    "towCallCreated": "Der Abschleppruf wurde erfolgreich erstellt.",
+    "taxiCallCreated": "Der Taxiruf wurde erfolgreich erstellt.",
+    "911CallCreated": "Der 911-Anruf wurde erfolgreich erstellt.",
+    "callCountyService": "Grafschaftsdienst anrufen",
+    "dropToUnassign": "Verwerfen, um die Zuordnung zum Anruf aufzuheben",
+    "type": "Art der Aufforderung",
+    "alert_purgeSelectedCalls": "Sind Sie sicher, dass Sie {length} Elemente bereinigen wollen? Dies löscht {length} Elemente aus der Datenbank. Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_deleteCallEvent": "Sind Sie sicher, dass Sie dieses Ereignis löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_end911Call": "Sind Sie sicher, dass Sie diesen Anruf beenden möchten?",
+    "alert_endTowCall": "Sind Sie sicher, dass Sie diesen Anruf beenden möchten?"
   }
 }
